[metadata]
version = 0.7.0
name = holltwr
author = Florian Breit <florian@florian.me.uk>
author_email = florian@florian.me.uk
description =  A command line utility and Python package for splitting compact Praat TextGrid annotations into several separate tiers following a preset annotation convention
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
 license_files = LICENSE
url = https://github.com/lart-bangor/holltwr
project_urls =
    Bug Tracker = https://github.com/lart-bangor/holltwr/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
build_with_nuitka = True

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
  click
  requests

[options.package_data]
# Include all data files included in the assets folder of the holltwr package
halltwr = *.json

[options.entry_points]
console_scripts =
  holltwr = holltwr.__main__:main

[flake8]
max-line-length=100
max-complexity=6
inline-quotes=double
docstring-convention=google
